welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:27: error: type mismatch;
 found   : Unit
 required: Boolean
		if (EST) {
                ^